2006-08-30  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Changed file encoding (thanks Florent & Lars).

2006-07-23  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Filename generation fixes (duplicate folders).
	  release 0.8.7
	

2006-07-16  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Batch mode fixes 2.

2006-06-13  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Batch mode fixes.

2006-06-05  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Merged CustomFileChooser from 0.10 branch.

2006-06-03  Gautier Portet <kassoulet gmail com>

	* Makefile: Applied Gentoo fixes (thanks Hanno).

2006-06-01  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Added an error dialog when GStreamer version > 0.8.
	  release 0.8.6 

2006-05-31  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Removed previous fix, and added the possibility to
	  use filesrc instead of gnomevfssrc if it's absent. (#7652) (debian #367253)
	* soundconverter.py: Added an error message when we fail to create a
	  gnomevfssrc element.

2006-05-27  Gautier Portet <kassoulet gmail com>

	* soundconverter: Added Spanish translation.

2006-05-27  Gautier Portet  <kassoulet gmail com>

	* soundconverter: Added a custom file pattern choice.
	  (thanks Adolfo)
	  some cleanup.

2006-05-25  Gautier Portet  <kassoulet gmail com>

	* soundconverter.py: Fix problem with set_sensituve().
	  release 0.8.5

2006-05-10  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fix doubled folder (#7403).
	  release 0.8.4

2006-04-22  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fix an uncatched InvalidURIError when adding files.

2006-03-19  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: File permission are copied from source files now.

2006-03-15  Gautier Portet <kassoulet gmail com>

	* Makefile: Applied Makefile cleanup patch from Lars.