@@ -3,7 +3,7 @@
 #
 
 PACKAGE=soundconverter
-VERSION=0.8.7
+VERSION=0.8.8
 
 LINGUAS=fr pl pt_BR es
 
