@@ -20,7 +20,7 @@
 # USA
 
 NAME = "SoundConverter"
-VERSION = "0.8.7"
+VERSION = "0.8.88888888"
 GLADE = "soundconverter.glade"
 
 # Python standard stuff.
@@ -324,7 +324,7 @@ class TargetNameGenerator:
 	def get_target_name(self, sound_file):
 
 		root = urlparse.urlsplit(sound_file.get_base_path())[2]
-		basename, ext = os.path.splitext(sound_file.get_filename())
+		basename, ext = os.path.splitext(urllib.unquote(sound_file.get_filename()))
 		
 		dict = {
 			".inputname": basename,
@@ -338,7 +338,7 @@ class TargetNameGenerator:
 			dict[key] = sound_file[key]
 		
 		pattern = os.path.join(self.subfolders, self.basename + self.suffix)
-		result = pattern % dict
+		result = urllib.quote(pattern % dict)
 		if self.replace_messy_chars:
 			s = ""
 			result = urllib.unquote(result)
@@ -1290,11 +1290,12 @@ class PreferencesDialog:
 		generator.set_basename_pattern(self.get_basename_pattern())
 		if for_display:
 			generator.set_replace_messy_chars(False)
+			return urllib.unquote(generator.get_target_name(sound_file))
 		else:
 			generator.set_replace_messy_chars(
 				self.get_int("replace-messy-chars"))
+			return generator.get_target_name(sound_file)
 
-		return generator.get_target_name(sound_file)
 	
 	def process_custom_pattern(self, pattern):
 			pattern = pattern.replace("{Artist}", "%(artist)s")
