@@ -1,3 +1,7 @@
+2006-09-03  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter.py: Fix quoting of tags when generating filenames.
+
 2006-08-30  Gautier Portet <kassoulet gmail com>
 
 	* soundconverter.py: Changed file encoding (thanks Florent & Lars).
